# codex-kraft

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  mypy.ini  plan.md  pyproject.toml  ruff.toml  tasks.md
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  getting-started.md  index.md  overview.md
docs/api/: batch.md  column.md  evolution.md  mutator.md  runner.md  schema.md
docs/guides/: schema-evolution.md  simulations.md
examples/: basic_simulation.py  registry_simulation.py
kraft/: __init__.py
kraft/core/: batch.py  column.py  evolution.py  mutator.py  registry.py  runner.py  schema.py
tests/core/: test_batch.py  test_column.py  test_evolution.py  test_mutator.py  test_registry.py  test_runner.py  test_schema.py
tests/integration/: test_postgres_simulation.py
